[package]
name = "sexp"
version = "0.1.1"
authors = ["Clark Gaebel <cg.wowus.cg@gmail.com>"]

homepage = "https://github.com/cgaebel/sexp"
repository = "https://github.com/cgaebel/sexp"

description = "A small, simple, self-contained, s-expression parser."

license = "MIT"

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
